@@ -4,6 +4,8 @@ Changelog
 0.2
 ---
 
+- schema TierPrice: renamed min_sale_qty to qty, renamed customer_group to customer_group_id 
+
 - schema: renamed shortdescription to short_description
 
 - schema: use Float instead of Decimal
